--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,21 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-size: cover;
 }
+
+#clock span {
+  color: white;
+  font-size: 5em;
+  font-weight: 500;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0.5em 0.3em 0em 0.3em;
+}
+
+#greeting {
+  color: white;
+  font-size: 3em;
+  font-weight: 400;
+}
+
+.hidden {
+  display: none;
+}
