--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-size: cover;
   color: white;
+  display: flex;
 }
 
 #clock span {
