--- a/css/styles.css
+++ b/css/styles.css
@@ -3,27 +3,107 @@
 body {
   height: 100vh;
   width: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Arial", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-size: cover;
   color: white;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 10vh 80vh 10vh;
 }
 
 #clock span {
-  font-size: 5em;
+  font-size: 15vh;
   font-weight: 500;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 0.5em 0.3em 0em 0.3em;
 }
 
 #greeting {
-  font-size: 3em;
+  font-size: 5vh;
   font-weight: 400;
+  padding-top: 0.2em;
+}
+#login-form {
+  font-size: 5vh;
+  font-weight: 400;
+  padding-top: 0.2em;
+}
+#main {
+  grid-column: 2/3;
+  grid-row: span 3;
+  justify-self: center;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 1em 1em 2em 1em;
+  border-radius: 2em;
+}
+#clock {
+  justify-content: center;
+}
+#search {
+  grid-column: 1;
+  grid-row: 0;
+  padding-left: 1vh;
+  padding-top: 1vh;
+}
+#search > input {
+  background-color: rgba(0, 0, 0, 0);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.7);
+}
+#search > input:focus {
+  background-color: rgba(0, 0, 0, 0);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid rgba(255, 255, 255, 1);
+  outline: none;
 }
 
+#todo {
+  grid-column: 3;
+  grid-row: 2 / span 2;
+  align-self: end;
+  padding-right: 1vh;
+  padding-bottom: 1vh;
+}
+#timer {
+  grid-column: 1;
+  grid-row: 2 / span 2;
+  align-self: end;
+  padding-left: 1vh;
+  padding-bottom: 1vh;
+}
+#weather {
+  grid-column: 3;
+  grid-row: 1;
+  justify-self: end;
+  align-self: start;
+  right: 0;
+  top: 0;
+  height: 4vh;
+  font-size: 3vh;
+  font-weight: 400;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  align-items: center;
+  padding-right: 1vh;
+  padding-top: 1vh;
+}
+#weather > span:last-child {
+  grid-column: span 2;
+  font-size: 1.5vh;
+  font-weight: 400;
+  justify-self: center;
+  padding-top: 0px;
+}
 #weather > img {
-  height: 2em;
+  height: 4vh;
 }
 
 .hidden {
