--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,17 @@
 body {
   height: 100vh;
   width: 100%;
-  font-family: "Arial", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Oxygen, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-size: cover;
   color: white;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 200px 1fr 200px;
   grid-template-rows: 10vh 80vh 10vh;
+}
+
+.hidden {
+  display: none;
 }
 
 input {
@@ -50,12 +54,12 @@ button {
 
 #clock span {
   font-size: 15vh;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 #greeting {
   font-size: 5vh;
-  font-weight: 400;
+  font-weight: 300;
   padding-top: 0.2em;
 }
 #login-form {
@@ -117,7 +121,6 @@ body > div:first-child {
 #todo-title {
   order: 2;
   align-self: end;
-  font-weight: 300;
   font-size: 18px;
   margin-right: 10px;
   margin-bottom: 10px;
@@ -186,20 +189,58 @@ li {
 .done > span {
   text-decoration: line-through;
 }
-#timer {
+#canvas-wrap {
   grid-column: 1;
   grid-row: 2 / span 2;
   align-self: end;
   margin-left: 20px;
   margin-bottom: 15px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, auto);
+  position: relative;
 }
-#timer > span,
-i {
-  grid-column: span 4;
-  justify-self: center;
+#timer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+}
+#timer > div:first-child {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 28px;
+}
+
+.min,
+.sec {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+#timer button {
+  font-size: 15px;
+}
+.min button:hover,
+.sec button:hover,
+#timer > i:hover {
+  cursor: pointer;
+}
+#time-left {
+  font-size: 50px;
+  font-weight: 100;
+  font-family: monospace;
+}
+/* canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+} */
+#timer > i {
+  font-size: 30px;
+  padding-top: 15px;
 }
 #weather {
   grid-column: 3;
@@ -227,11 +268,4 @@ i {
 }
 #weather > img {
   height: 4vh;
-}
-#weather:hover {
-  cursor: pointer;
-}
-
-.hidden {
-  display: none;
 }
