--- a/css/styles.css
+++ b/css/styles.css
@@ -204,8 +204,8 @@ li {
   align-items: center;
   width: 200px;
   height: 200px;
-  border-radius: 50%;
-  border: 2px solid rgba(255, 255, 255, 0.5);
+  /* border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.5); */
 }
 #timer > div:first-child {
   padding-top: 20px;
@@ -233,11 +233,12 @@ li {
   font-weight: 100;
   font-family: monospace;
 }
-/* canvas {
+canvas {
   position: absolute;
-  top: 0;
-  left: 0;
-} */
+  top: -5px;
+  left: -5px;
+  z-index: -1;
+}
 #timer > i {
   font-size: 30px;
   padding-top: 15px;
